[package]
name = "schulte_table"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_embedded_assets = "0.11.0"
rand = "0.8.5"

[lib]
name = "schulte_table"
crate-type = ["staticlib", "cdylib"]

[package.metadata.android]
package = "org.bevyengine.schulte_table"
apk_name = "schulte_table"
assets = "assets"
# This strips debug symbols from the shared libraries, drastically reducing APK size. If you need them, remove the option.
strip = "strip"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
label = "Schulte Table"
