[package]
name = "schulte_table"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
rand = "0.8.5"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.android]
package = "org.example.schulte_table"
apk_name = "schulte_table"
strip = "strip"
assets = "assets"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
label = "Schulte Table"
