[package]
name = "schulte_table"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
directories = "5.0.1"
rand = "0.8.5"

[features]
android = []

[lib]
crate-type = [
    "staticlib",
    "cdylib",
    "rlib", # needed for running lib.rs code in main.rs
]

[package.metadata.android]
package = "org.example.schulte_table"
apk_name = "schulte_table"
strip = "strip"
assets = "assets"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
label = "Schulte Table"
